Added the pipfile, Procfile and app.py for Heroku deployment

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ sqlalchemy = "*"
 pymysql = "*"
 flask-sqlalchemy = "*"
 flask-wtf = "*"
+passlib = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
