Add code to search meal and add meal in url and database in dashboard

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,9 @@ pandas = "*"
 flask = "*"
 sqlalchemy = "*"
 pymysql = "*"
+flask-wtf = "*"
 flask-sqlalchemy = "*"
+update = "*"
 
 [requires]
 python_version = "3.7"
