--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ flask-sqlalchemy = "*"
 update = "*"
 passlib = "*"
 gunicorn = "*"
+simplejson = "*"
+plotly = "*"
 
 [requires]
 python_version = "3.7"
